--- a/kater.html
+++ b/kater.html
@@ -12,7 +12,7 @@
         <ul>
              <li><a href="index.html"><img src="afbeeldingen/preview.png" alt="Logo Flixbus"></a></li>
             <li><a href="contactpagina.html">Log in </a> </li>
-             <li><a href="">Bookmark</a> </li>
+             <li><a href="bookmark.html">Bookmark</a> </li>
         </ul>
     </nav>
     
