--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><img src="afbeeldingen/preview.png" alt="Logo Flixbus"></a>
             </li>
             <li><a href="contactpagina.html">Log in </a> </li>
-            <li><a href="">Bookmark</a> </li>
+            <li><a href="bookmark.html">Bookmark</a> </li>
         </ul>
     </nav>
 
@@ -24,7 +24,7 @@
         <header>
            <div class="header">
             <h1>99 verhalen</h1>
-            <h2> Allemaal in een andere stijl.</h2>
+            <h2> Allemaal in een andere stijl</h2>
             <h3><a href="#beneden">ontdek de genres</a><img src="afbeeldingen/link%20button.png" alt="link"></h3>
             </div>
         </header>
@@ -40,23 +40,23 @@
             <div>
                 <h2>Kater</h2>
                 <p>Ik had vandaag bus 21 willen nemen naar het Centraal Station om naar de Openbare Bibliotheek te gaan...</p>
-                <a href="kater.html">Lees verhaal <img src="afbeeldingen/iconbutton.png" alt="link"></a>
+                <a href="kater.html">Lees Kater <img src="afbeeldingen/iconbutton.png" alt="link"></a>
                 </div>
         </section>
 
         <section class="twee">
            <div>
             <h2>Verliefd</h2>
-            <p>Om exact 12 uur Nederlandse tijd stap ik op het Centraal Stationsplein uit bus 21. Toen werd ze verliefd...</p>
-            <a href="kater.html">Lees verhaal <img src="afbeeldingen/iconbutton.png" alt="link"></a>
+            <p>Om exact 12 uur Nederlandse tijd stap ik op het Centraal Stationsplein uit bus 21. Toen werd ze verliefd op haar...</p>
+            <a href="kater.html">Lees Verliefd <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
 
         <section class="drie">
            <div>
             <h2>Honger Winter</h2>
-            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen: tot...</p>
-            <a href="kater.html">Lees verhaal <img src="afbeeldingen/iconbutton.png" alt="link"></a>
+            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen: tot een bepaald moment...</p>
+            <a href="kater.html">Lees Honger Winter <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
 
@@ -64,7 +64,7 @@
            <div>
             <h2>Harry Mulisch</h2>
             <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was...</p>
-            <a href="kater.html">Lees verhaal <img src="afbeeldingen/iconbutton.png" alt="link"></a>
+            <a href="kater.html">Lees Harry Mulish <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
     </div>
@@ -75,43 +75,43 @@
         <article>
             <img src="afbeeldingen/iconen/liefde.png" alt="hartje">
             <h2>Liefde</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre liefde <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/humor.png" alt="lachende smiley">
             <h2>Humor</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genrehumor.html">Genre humor <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/drama.png" alt="huilende smiley">
             <h2>drama</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre drama <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/fantasie.png" alt="heksen hoed">
             <h2>Fantasie</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre fantasie <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/kinderen.png" alt="heksen hoed">
             <h2>Kinderen</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre kinderen <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/gedichten.png" alt="veer pen">
             <h2>Gedichten</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre gedichten <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
 
         <article>
             <img src="afbeeldingen/iconen/overig.png" alt="drie puntjes">
             <h2>Overig</h2>
-            <a href="genreliefde.html">Naar genre <img src="afbeeldingen/link%20button.png" alt="button"></a>
+            <a href="genreliefde.html">Genre overig <img src="afbeeldingen/link%20button.png" alt="button"></a>
         </article>
         </div>
     </main>
