Project-web-herkansing-versie 3-Sophie Scheeffer

--- a/genrehumor.html
+++ b/genrehumor.html
@@ -76,7 +76,7 @@
         <section class="vier">
            <div>
             <h2>Clown</h2>
-            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was...</p>
+            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12...</p>
             <a href="kater.html">Lees Clown <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
@@ -94,7 +94,7 @@
        <section class="vier">
            <div>
             <h2>Comedy</h2>
-            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was...</p>
+            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12...</p>
             <a href="kater.html">Lees Comedy <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
@@ -103,7 +103,7 @@
         <section class="drie">
            <div>
             <h2>Gehaktbal</h2>
-            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen: tot...</p>
+            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen...</p>
             <a href="kater.html">Lees Gehaktbal <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
@@ -111,7 +111,7 @@
         <section class="drie">
            <div>
             <h2>Zak</h2>
-            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen: tot...</p>
+            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen...</p>
             <a href="kater.html">Lees Zak <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
