--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="drie">
            <div>
             <h2>Honger Winter</h2>
-            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen: tot een bepaald moment...</p>
+            <p>Kijk, op het moment dat de bus van het gemeentevervoersbedrijf zeg maar stopt, dat wil zeggen...</p>
             <a href="kater.html">Lees Honger Winter <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
@@ -63,7 +63,7 @@
         <section class="vier">
            <div>
             <h2>Harry Mulisch</h2>
-            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was...</p>
+            <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12...</p>
             <a href="kater.html">Lees Harry Mulish <img src="afbeeldingen/iconbutton.png" alt="link"></a>
         </div>
         </section>
